--- a/kubernetes_deploy/live/staging/ingress.yaml
+++ b/kubernetes_deploy/live/staging/ingress.yaml
@@ -2,15 +2,15 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-    external-dns.alpha.kubernetes.io/set-identifier: laa-fee-calculator-laa-fee-calculator-staging-green
+    external-dns.alpha.kubernetes.io/set-identifier: laa-fee-calculator-v1-laa-fee-calculator-staging-green
     external-dns.alpha.kubernetes.io/aws-weight: "100"
-    kubernetes.io/ingress.class: "modsec01"
     nginx.ingress.kubernetes.io/enable-modsecurity: "true"
     nginx.ingress.kubernetes.io/modsecurity-snippet: |
       SecRuleEngine On
-  name: laa-fee-calculator
+  name: laa-fee-calculator-v1
   namespace: laa-fee-calculator-staging
 spec:
+  ingressClassName: modsec
   rules:
     - host: staging.laa-fee-calculator.service.justice.gov.uk
       http:
