Fix syntax in CODEOWNERS to allow multiple teams

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,1 @@
-* @ministryofjustice/laa-claim-for-payment
-* @ministryofjustice/laa-clair-taskforce
+* @ministryofjustice/laa-claim-for-payment @ministryofjustice/laa-clair-taskforce
