--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,7 +147,7 @@ jobs:
       - run:
           name: Split and run tests
           command: |
-            TESTDOTPATHS=$(circleci tests glob "fee_calculator/apps/calculator/tests/**/test_*.py" "fee_calculator/apps/api/tests/**/test_*.py" | sed 's/\S\+__init__.py//g')
+            TESTDOTPATHS=$(circleci tests glob "fee_calculator/apps/calculator/tests/**/test_*.py" | sed 's/\S\+__init__.py//g')
             echo $TESTDOTPATHS | tr ' ' '\n' | sort | uniq > circleci_test_files.txt
             TESTDOTPATHS=$(circleci tests split --split-by=timings circleci_test_files.txt)
             TESTDOTPATHS=$(echo $TESTDOTPATHS | tr "/" "." | sed 's/.py//g')
@@ -160,7 +160,7 @@ jobs:
       - store_test_results:
           path: tmp/test-reports
 
-  test-viewer:
+  test-viewer-and-api:
     executor: cloud-platform-executor
     parallelism: 1
     steps:
@@ -170,7 +170,7 @@ jobs:
       - run:
           name: Split and run tests
           command: |
-            TESTDOTPATHS=$(circleci tests glob "fee_calculator/apps/viewer/tests/**/test_*.py" | sed -e 's|\.py||g' -e 's|/|.|g' | circleci tests split)
+            TESTDOTPATHS=$(circleci tests glob "fee_calculator/apps/viewer/tests/**/test_*.py" "fee_calculator/apps/api/tests/**/test_*.py" | sed -e 's|\.py||g' -e 's|/|.|g' | circleci tests split)
             venv/bin/python -m coverage run --parallel-mode manage.py test $TESTDOTPATHS --verbosity=1 --noinput
             mv .coverage.* tmp/coverage
       - persist_to_workspace:
@@ -233,7 +233,7 @@ workflows:
             branches:
               ignore:
                 - master
-      - test-viewer:
+      - test-viewer-and-api:
           filters:
             branches:
               ignore:
@@ -246,7 +246,7 @@ workflows:
       - combine_test_coverage:
           requires:
             - test-calculator
-            - test-viewer
+            - test-viewer-and-api
       - build_and_push_approval:
           type: approval
       - build_and_push_image:
@@ -281,7 +281,7 @@ workflows:
             branches:
               only:
                 - master
-      - test-viewer:
+      - test-viewer-and-api:
           filters:
             branches:
               only:
@@ -294,7 +294,7 @@ workflows:
       - combine_test_coverage:
           requires:
             - test-calculator
-            - test-viewer
+            - test-viewer-and-api
       - build_and_push_image:
           requires:
             - linting
