--- a/kubernetes_deploy/live/dev/deployment.yaml
+++ b/kubernetes_deploy/live/dev/deployment.yaml
@@ -56,3 +56,5 @@ spec:
             - ALL
           runAsNonRoot: true
           allowPrivilegeEscalation: false
+          seccompProfile:
+            type: RuntimeDefault
