--- a/kubernetes_deploy/live/production/deployment.yaml
+++ b/kubernetes_deploy/live/production/deployment.yaml
@@ -61,3 +61,5 @@ spec:
             - ALL
           runAsNonRoot: true
           allowPrivilegeEscalation: false
+          seccompProfile:
+            type: RuntimeDefault
