--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,11 @@ references:
 # EXECUTORS
 # ------------------
 executors:
+  python-executor:
+    resource_class: small
+    docker:
+      - image: cimg/python:3.10
+
   cloud-platform-executor:
     docker:
       - image: ministryofjustice/cloud-platform-tools
@@ -32,17 +37,13 @@ commands:
     steps:
       - restore_cache:
           keys:
-            - laa-fee-calculator-v1-{{ checksum "requirements/circleci.txt" }}
+            - laa-fee-calculator-v1-{{ checksum "Pipfile.lock" }}
       - run:
           name: Set up python dependencies
           command: |
-            apk add linux-headers
-            apk add python3-dev
-            `which python3` -m venv venv
-            venv/bin/pip install -U setuptools pip wheel
-            venv/bin/pip install -r requirements/circleci.txt
+            pipenv install --dev
       - save_cache:
-          key: laa-fee-calculator-v1-{{ checksum "requirements/circleci.txt" }}
+          key: laa-fee-calculator-v1-{{ checksum "Pipfile.lock" }}
           paths:
             - "~/.cache/pip"
 
@@ -126,16 +127,16 @@ commands:
 # ------------------
 jobs:
   linting:
-    executor: cloud-platform-executor
+    executor: python-executor
     steps:
       - checkout
       - setup_python_env
       - run:
           name: Run flake8
-          command: venv/bin/python -m flake8
+          command: pipenv run flake8
 
   test-calculator:
-    executor: cloud-platform-executor
+    executor: python-executor
     parallelism: 3
     steps:
       - checkout
@@ -148,7 +149,7 @@ jobs:
             echo $TESTDOTPATHS | tr ' ' '\n' | sort | uniq > circleci_test_files.txt
             TESTDOTPATHS=$(circleci tests split --split-by=timings circleci_test_files.txt)
             TESTDOTPATHS=$(echo $TESTDOTPATHS | tr "/" "." | sed 's/.py//g')
-            venv/bin/python -m coverage run --parallel-mode manage.py test $TESTDOTPATHS --verbosity=1 --noinput
+            pipenv run coverage run --parallel-mode manage.py test $TESTDOTPATHS --verbosity=1 --noinput
             mv .coverage.* tmp/coverage
       - persist_to_workspace:
           root: tmp
@@ -158,7 +159,7 @@ jobs:
           path: tmp/test-reports
 
   test-viewer-and-api:
-    executor: cloud-platform-executor
+    executor: python-executor
     parallelism: 1
     steps:
       - checkout
@@ -168,7 +169,7 @@ jobs:
           name: Split and run tests
           command: |
             TESTDOTPATHS=$(circleci tests glob "fee_calculator/apps/viewer/tests/**/test_*.py" "fee_calculator/apps/api/tests/**/test_*.py" | sed -e 's|\.py||g' -e 's|/|.|g' | circleci tests split)
-            venv/bin/python -m coverage run --parallel-mode manage.py test $TESTDOTPATHS --verbosity=1 --noinput
+            pipenv run coverage run --parallel-mode manage.py test $TESTDOTPATHS --verbosity=1 --noinput
             mv .coverage.* tmp/coverage
       - persist_to_workspace:
           root: tmp
@@ -176,7 +177,7 @@ jobs:
             - coverage
 
   combine_test_coverage:
-    executor: cloud-platform-executor
+    executor: python-executor
     steps:
       - checkout
       - setup_python_env
@@ -185,8 +186,8 @@ jobs:
       - run:
           name: Combine and report on test coverage
           command: |
-            venv/bin/python -m coverage combine tmp/coverage
-            venv/bin/python -m coverage report
+            pipenv run coverage combine tmp/coverage
+            pipenv run coverage report
 
   build_and_push_image:
     executor: cloud-platform-executor
