--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,8 @@ updates:
     time: "03:00"
     timezone: Europe/London
   open-pull-requests-limit: 10
+  allow:
+    - dependency-type: "all"
   rebase-strategy: "disabled"
   reviewers:
   - "ministryofjustice/laa-claim-for-payment"
