--- a/kubernetes_deploy/live/staging/ingress.yaml
+++ b/kubernetes_deploy/live/staging/ingress.yaml
@@ -7,6 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/enable-modsecurity: "true"
     nginx.ingress.kubernetes.io/modsecurity-snippet: |
       SecRuleEngine On
+      SecRule REQUEST_HEADERS:User-Agent "@contains GPTBot" "id:1001, phase:1, deny, status:403, log"
   name: laa-fee-calculator-v1
   namespace: laa-fee-calculator-staging
 spec:
