--- a/.github/workflows/devsecops_sca_scan.yml
+++ b/.github/workflows/devsecops_sca_scan.yml
@@ -23,6 +23,6 @@ jobs:
 
     steps:
       - name: Run SCA
-        uses: ministryofjustice/devsecops-actions/sca@v1.3.0
+        uses: ministryofjustice/devsecops-actions/sca@234ac1dca7bb965417bae451d3ea284a1286d68c
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
