--- a/.github/workflows/devsecops_sca_scan.yml
+++ b/.github/workflows/devsecops_sca_scan.yml
@@ -26,3 +26,4 @@ jobs:
         uses: ministryofjustice/devsecops-actions/sca@234ac1dca7bb965417bae451d3ea284a1286d68c
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          renovate: "false"
